--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,28 @@
 version: '3.8'
 
 services:
-  frontend:
-    build:
-      context: ./frontend
-    image: frontend-app
-    working_dir: /app
-    volumes:
-      - ./frontend:/app
+  ngrok:
+    image: ngrok/ngrok:alpine
+    environment:
+      NGROK_AUTHTOKEN: 1o4Jv6F9LpJVyc4XthPQwTRXILn_4gdTNK85sBzeVLShQBrQw
+    command: 'http host.docker.internal:3000'
     ports:
-      - '3000:3000'
-    depends_on:
-      - backend
-    command: sh -c "yarn build && yarn start"
+      - '4040:4040'
+    expose:
+      - '4040'
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:4040/api/tunnels || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   backend:
     build:
       context: ./backend
     image: backend-app
     working_dir: /app
+    depends_on:
+      - ngrok
     volumes:
       - ./backend:/app
     ports:
@@ -26,6 +30,18 @@ services:
     environment:
       - PORT=8000
     command: yarn start
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "3001:80"
+    depends_on:
+      - backend
+    volumes:
+      - frontend-data:/usr/share/nginx/html
+
 
 volumes:
   frontend:
