--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,10 @@
-# Use the official Node.js image as the base image
-FROM node:18-alpine
+# Stage 1: Build the application
+FROM node:18 AS build
 
 # Set the working directory
 WORKDIR /app
 
-# Copy the package.json and yarn.lock files
+# Copy the package.json and yarn.lock
 COPY package.json yarn.lock ./
 
 # Install dependencies
@@ -13,11 +13,19 @@ RUN yarn install
 # Copy the rest of the application code
 COPY . .
 
-# Build the Next.js application
+# Build the React application
 RUN yarn build
 
-# Expose the port the app runs on
-EXPOSE 3000
+# Stage 2: Serve the application using a lightweight web server
+FROM nginx:alpine
 
-# Start the Next.js application
-CMD ["yarn", "start"]
+# Copy the build output from the previous stage
+COPY --from=build /app/build /usr/share/nginx/html
+
+COPY nginx.conf /etc/nginx/nginx.conf
+
+# Expose port 80
+EXPOSE 80
+
+# Start Nginx server
+CMD ["nginx", "-g", "daemon off;"]
