--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,8 +41,9 @@ services:
       - backend
     volumes:
       - frontend-data:/usr/share/nginx/html
-
+    environment:
+      - REACT_APP_BACKEND_URL=http://backend:8000
 
 volumes:
-  frontend:
+  frontend-data:
   backend:
