--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
     volumes:
       - frontend-data:/usr/share/nginx/html
     environment:
-      - REACT_APP_BACKEND_URL=http://backend:8000
+      - REACT_APP_BACKEND_URL=http://nginx
 
 volumes:
   frontend-data:
