--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -13,19 +13,23 @@ RUN yarn install
 # Copy the rest of the application code
 COPY . .
 
-# Build the React application
+# Build the Next.js application
 RUN yarn build
 
-# Stage 2: Serve the application using a lightweight web server
-FROM nginx:alpine
+# Stage 2: Serve the application using the Next.js server
+FROM node:18-alpine
+
+# Set the working directory
+WORKDIR /app
 
 # Copy the build output from the previous stage
-COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=build /app ./
 
-COPY nginx.conf /etc/nginx/nginx.conf
+# Install production dependencies
+RUN yarn install --production
 
-# Expose port 80
-EXPOSE 80
+# Expose port 3000
+EXPOSE 3000
 
-# Start Nginx server
-CMD ["nginx", "-g", "daemon off;"]
+# Start the Next.js application
+CMD ["yarn", "start"]
